--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
-        <title>Dasmoto's Arts & Crafts</title>
+        <title>Just testing GitHub Pages</title>
     </head>
 
     <body>
