--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header class="page-header">           
             <h1>
-                Dasmoto's Arts & Crafts
+                Just testing GitHub Pages
             </h1>
         </header>
 
